# calculate-fama-french-type-factor-return

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
