[tool.poetry]
name = "calculate-fama-french-type-factor-return"
version = "0.1.0"
description = ""
authors = ["ktman-ktman <test@gitlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
click = "^8.1.7"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
